--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="/images/bolt-solid-24.png">
+    <link rel="shortcut icon" type="x-icon" href="/images/bolt-solid-24.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ResponsivePortfolio </title>
     <link rel="stylesheet" href="./style.css">
